--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
             </intent-filter>
         </activity>
         
+        <activity
+            android:name=".ARViewActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
+        
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
