feat(ar-qibla): Add customizable primary color configuration
- Add Phone_icon.png asset for UI enhancements
- Introduce primaryColor parameter to ARPageConfig for theme customization
- Update ARQiblaPage to require config parameter and pass primaryColor to AR views
- Replace hardcoded Colors.green with widget.primaryColor in Android AR view
- Replace hardcoded Colors.green with widget.primaryColor in iOS AR view
- Update example app to demonstrate primaryColor usage with Colors.green
- Add asset paths to example pubspec.yaml for proper resource loading
- Allows users to customize the primary accent color throughout the AR interface

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,3 +24,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - packages/qibla_ar_finder/assets/images/
+    - packages/qibla_ar_finder/assets/models/
